Add benchmarking